k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: srt-clarity-search
  labels:
    name: srt-clarity-search
    app: srt-clarity-search
